--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/dtbinh1511/nodejs_blog/issues"
   },
-  "homepage": "https://github.com/dtbinh1511/nodejs_blog#readme"
+  "homepage": "https://github.com/dtbinh1511/nodejs_blog#readme",
+  "devDependencies": {
+    "express": "^4.18.1"
+  }
 }
