--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/dtbinh1511/nodejs_blog#readme",
   "devDependencies": {
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
 }
