--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "express-handlebars": "^6.0.6"
   }
 }
