--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/dtbinh1511/nodejs_blog#readme",
   "devDependencies": {
-    "express": "^4.18.1",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "express": "^4.18.1"
   }
 }
