--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "mongoose": "^6.5.3"
+    "method-override": "^3.0.0",
+    "mongoose": "^6.5.3",
+    "mongoose-slug-generator": "^1.0.4"
   }
 }
